Adding DA+FD streamwise Testcase

--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/DA_configMaster.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/DA_configMaster.cfg
@@ -8,16 +8,17 @@
 % File Version 6.0.1 "Falcon"                                                   %
 %                                                                               %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-% Mathematical problem (DIRECT, CONTINUOUS_ADJOINT, DISCRETE_ADJOINT)
-MATH_PROBLEM= DIRECT
-%
-% When do I have to use this again!? There was a rather nasty bug I recall if the option is nnot set
 %KIND_INTERPOLATION= RADIAL_BASIS_FUNCTION
-%          
+%
+% Physical governing equations (EULER, NAVIER_STOKES,
+%                               WAVE_EQUATION, HEAT_EQUATION, FEM_ELASTICITY,
+%                               POISSON_EQUATION)             
 SOLVER= MULTIPHYSICS
 %
-CONFIG_LIST= (configFluid.cfg, configSolid.cfg)
+% Mathematical problem (DIRECT, CONTINUOUS_ADJOINT, DISCRETE_ADJOINT)
+MATH_PROBLEM= DISCRETE_ADJOINT
+%
+CONFIG_LIST = (DA_configFluid.cfg, DA_configSolid.cfg)
 %
 MARKER_ZONE_INTERFACE= ( fluid_pin1_interface, solid_pin1_interface, fluid_pin2_interface, solid_pin2_interface, fluid_pin3_interface, solid_pin3_interface )
 %
@@ -25,33 +26,26 @@ MARKER_CHT_INTERFACE= ( fluid_pin1_interface, solid_pin1_interface, fluid_pin2_i
 %
 TIME_DOMAIN = NO
 %
-SCREEN_OUTPUT= ( OUTER_ITER, BGS_PRESSURE[0], BGS_TEMPERATURE[0], BGS_TEMPERATURE[1], STREAMWISE_MASSFLOW[0], STREAMWISE_DP[0], AVG_TEMPERATURE[1] )
-%
-HISTORY_OUTPUT= ( ITER, BGS_RES[0], BGS_RES[1], RMS_RES[0], RMS_RES[1], STREAMWISE_PERIODIC[0], FLOW_COEFF[0], HEAT[1], LINSOL[0], LINSOL[1], HEAT[0] )
+SCREEN_OUTPUT= (OUTER_ITER, BGS_ADJ_PRESSURE[0], BGS_ADJ_TEMPERATURE[0], BGS_ADJ_TEMPERATURE[1], BGS_ADJ_TEMPERATURE[0])
+HISTORY_OUTPUT= ( ITER, BGS_RES[0], BGS_RES[1], RMS_RES[0], RMS_RES[1] )
 %
 CONV_RESIDUAL_MINVAL= -26
-%
 % Number of total iterations
-OUTER_ITER= 4000
-%
+OUTER_ITER= 3000
 OUTPUT_WRT_FREQ= 1000
-%
 SCREEN_WRT_FREQ_OUTER= 25
 %
 %CHT_ROBIN= NO
 %
-OUTPUT_FILES= (RESTART, PARAVIEW_MULTIBLOCK)
+OUTPUT_FILES= (RESTART, RESTART_ASCII, PARAVIEW_MULTIBLOCK, PARAVIEW_LEGACY, SURFACE_PARAVIEW_ASCII)
 %
 % Mesh input file
 MESH_FILENAME= 2D-PinArray_FFD.su2
-%
 %SPECIFIC_HEAT_CP = 871.0
 %
 % Mesh input file format (SU2, CGNS, NETCDF_ASCII)
 MESH_FORMAT= SU2
-%
 GRAD_OBJFUNC_FILENAME= of_grad.csv
-%
 % -------------------- FREE-FORM DEFORMATION PARAMETERS -----------------------%
 %
 % Tolerance of the Free-Form Deformation point inversion
@@ -65,6 +59,7 @@ FFD_ITERATIONS= 500
 %                     2D case (FFD_BoxTag, X1, Y1, 0.0, X2, Y2, 0.0, X3, Y3, 0.0, X4, Y4, 0.0,
 %                              0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
 FFD_DEFINITION= (BOX,  0.0029772,0.0,0.0,  0.0081772,0.0,0.0  0.0081772,0.0026,0.0,  0.0029772,0.0026,0.0, 0.0,0.0,0.0,  0.0,0.0,0.0  0.0,0.0,0.0,  0.0,0.0,0.0 )
+
 %
 % FFD box degree: 3D case (x_degree, y_degree, z_degree)
 %                 2D case (x_degree, y_degree, 0)
@@ -89,7 +84,8 @@ FFD_CONTINUITY= NO_DERIVATIVE
 %                      FFD_CONTROL_POINT_2D, FFD_CAMBER_2D, FFD_THICKNESS_2D, 
 %                      FFD_TWIST_2D, HICKS_HENNE, SURFACE_BUMP, SURFACE_FILE)
 %DV_KIND= FFD_SETTING
-DV_KIND= FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D
+%DV_KIND= FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D
+DV_KIND= FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D,FFD_CONTROL_POINT_2D
 %
 % Marker of the surface in which we are going apply the shape deformation
 DV_MARKER= ( fluid_pin2_interface, solid_pin2_interface )
@@ -100,12 +96,14 @@ DV_MARKER= ( fluid_pin2_interface, solid_pin2_interface )
 % - FFD_CONTROL_POINT ( FFD_BoxTag, i_Ind, j_Ind, k_Ind, x_Disp, y_Disp, z_Disp )
 % - FFD_CONTROL_POINT_2D ( FFD_BoxTag, i_Ind, j_Ind, x_Disp, y_Disp )
 %DV_PARAM= ( 1.0 )
-DV_PARAM= ( BOX, 0, 0, 0.0, 1.0);( BOX, 1, 0, 0.0, 1.0); ( BOX, 2, 0, 0.0, 1.0); ( BOX, 3, 0, 0.0, 1.0); ( BOX, 4, 0, 0.0, 1.0); ( BOX, 5, 0, 0.0, 1.0); ( BOX, 6, 0, 0.0, 1.0); ( BOX, 7, 0, 0.0, 1.0); ( BOX, 8, 0, 0.0, 1.0); ( BOX, 0, 1, 0.0, 1.0); ( BOX, 1, 1, 0.0, 1.0); ( BOX, 2, 1, 0.0, 1.0); ( BOX, 3, 1, 0.0, 1.0); ( BOX, 4, 1, 0.0, 1.0); ( BOX, 5, 1, 0.0, 1.0); ( BOX, 6, 1, 0.0, 1.0); ( BOX, 7, 1, 0.0, 1.0); ( BOX, 8, 1, 0.0, 1.0)
+%DV_PARAM= ( BOX, 0, 0, 0.0, 1.0);( BOX, 1, 0, 0.0, 1.0); ( BOX, 2, 0, 0.0, 1.0); ( BOX, 3, 0, 0.0, 1.0); ( BOX, 4, 0, 0.0, 1.0); ( BOX, 5, 0, 0.0, 1.0); ( BOX, 6, 0, 0.0, 1.0); ( BOX, 7, 0, 0.0, 1.0); ( BOX, 8, 0, 0.0, 1.0); ( BOX, 0, 1, 0.0, 1.0); ( BOX, 1, 1, 0.0, 1.0); ( BOX, 2, 1, 0.0, 1.0); ( BOX, 3, 1, 0.0, 1.0); ( BOX, 4, 1, 0.0, 1.0); ( BOX, 5, 1, 0.0, 1.0); ( BOX, 6, 1, 0.0, 1.0); ( BOX, 7, 1, 0.0, 1.0); ( BOX, 8, 1, 0.0, 1.0)
+DV_PARAM= ( BOX, 0, 1, 0.0, 1.0); ( BOX, 1, 1, 0.0, 1.0); ( BOX, 2, 1, 0.0, 1.0); ( BOX, 3, 1, 0.0, 1.0); ( BOX, 4, 1, 0.0, 1.0); ( BOX, 5, 1, 0.0, 1.0); ( BOX, 6, 1, 0.0, 1.0); ( BOX, 7, 1, 0.0, 1.0); ( BOX, 8, 1, 0.0, 1.0)
 %
 % Value of the shape deformation
 %DV_VALUE= 1.0
 %DV_VALUE= 0.0015,0.015,0.15,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0
-DV_VALUE= 1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0
+%DV_VALUE= 1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0
+DV_VALUE= 1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
 % Linear solver or smoother for implicit formulations (FGMRES, RESTARTED_FGMRES, BCGSTAB)
