--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/DA_configSolid.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/DA_configSolid.cfg
@@ -4,51 +4,44 @@
 % Case description: Unit Cell flow around pin array (solid)
 % Author: T. Kattmann
 % Institution: Robert Bosch GmbH
-% Date: 20.05.2020
-% File Version 7.0.4 "Blackbird"                                               %
+% Date: 07.06.2019
+% File Version 6.2.0 "Falcon"                                                  %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
-% Mathematical problem (DIRECT, CONTINUOUS_ADJOINT, DISCRETE_ADJOINT)
-MATH_PROBLEM= DIRECT
-%
 SOLVER= HEAT_EQUATION
-%
 RESTART_SOL= NO
+READ_BINARY_RESTART= YES
+%
+%HISTORY_OUTPUT= (ITER, RMS_RES, HEAT)
+%OBJECTIVE_FUNCTION= DRAG
+OBJECTIVE_FUNCTION= TOTAL_AVG_TEMPERATURE
+%
+OBJECTIVE_WEIGHT= 1.0
 %
 % ---------------- (SOLIDS) CONDUCTION CONDITION DEFINITION -------------------%
 %
-% !!!!! is this doing s.th. here
 INC_NONDIM= DIMENSIONAL
-%
-% Solids temperature at freestream conditions
 SOLID_TEMPERATURE_INIT= 345.0
-%
-% Density used in solids
 SOLID_DENSITY= 2719
 %
 % ---- IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
 %
-% Specific heat at constant pressure, Cp (1004.703 J/kg*K (air)). 
-% Incompressible fluids with energy eqn. only (CONSTANT_DENSITY, INC_IDEAL_GAS).
 SPECIFIC_HEAT_CP = 871.0
 %
 % --------------------------- THERMAL CONDUCTIVITY MODEL ----------------------%
 %
 CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
-%
-% !!!!!! do we need that shit here ???
-% Laminar Prandtl number (0.72 (air), only for CONSTANT_PRANDTL)
 PRANDTL_LAM = 6.99091
-%
-% Thermal conductivity used for heat equation
 % In solver_direct_heat:224 the thermal diff lambda/(cp * rho) is set and later
 % used for the viscous res
 SOLID_THERMAL_CONDUCTIVITY= 200
 %
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
+%
+%MARKER_SYM= ( solid_sym_sides)
 %
 %MARKER_ISOTHERMAL= (solid_pin1_inner, 300, solid_pin2_inner, 300, solid_pin3_inner, 300, solid_pin1_walls, 300, solid_pin2_walls, 300, solid_pin3_walls, 300)
 %
@@ -56,84 +49,60 @@ MARKER_HEATFLUX= (solid_pin1_inner, 5e5, solid_pin2_inner, 5e5, solid_pin3_inner
 %
 % ------------------------ SURFACES IDENTIFICATION ----------------------------%
 %
-% Marker(s) of the surface in the surface flow solution file
-MARKER_PLOTTING = ( solid_pin2_interface )
-%
-% Marker(s) of the surface where the non-dimensional coefficients are evaluated.
+MARKER_PLOTTING = ( solid_pin2_interface  )
 MARKER_MONITORING = ( solid_pin2_inner )
-%
-OBJECTIVE_FUNCTION= TOTAL_AVG_TEMPERATURE
-%
-OBJECTIVE_WEIGHT= 1.0
 %
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
-% Numerical method for spatial gradients (GREEN_GAUSS, WEIGHTED_LEAST_SQUARES)
 NUM_METHOD_GRAD= GREEN_GAUSS
 %
-% CFL number (initial value for the adaptive CFL number)
 CFL_NUMBER= 1e4
-%
-% Adaptive CFL number (NO, YES)
 CFL_ADAPT= NO
-%
-% !!!! still used! !!! what does it do?
+CFL_ADAPT_PARAM= ( 1.0, 0.8, 100.0, 100000.0 )
 BETA_FACTOR= 50
-%
-% !!!! still used! !!! what does it do?
-% Maximum Delta Time in local time stepping simulations
 MAX_DELTA_TIME= 1.0
 %
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
-% Linear solver or smoother for implicit formulations:
-% BCGSTAB, FGMRES, RESTARTED_FGMRES, CONJUGATE_GRADIENT (self-adjoint problems only), SMOOTHER.
 LINEAR_SOLVER= FGMRES
-%
-% Preconditioner of the Krylov linear solver or type of smoother (ILU, LU_SGS, LINELET, JACOBI)
 LINEAR_SOLVER_PREC= ILU
-%
-% Minimum error of the linear solver for implicit formulations
 LINEAR_SOLVER_ERROR= 1E-15
-%
-% Max number of iterations of the linear solver for the implicit formulation
 LINEAR_SOLVER_ITER= 20
 %
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
+CONV_CRITERIA= RESIDUAL
+%RESIDUAL_REDUCTION= 10
 CONV_RESIDUAL_MINVAL= -20
-%
 CONV_STARTITER= 10000000000
 %
 % -------------------- HEAT NUMERICAL METHOD DEFINITION -----------------------%
 %
-%!!! this is not used here
-CONV_NUM_METHOD_HEAT= SPACE_CENTERED
-%
-%!!! this is not used here
+CONV_NUM_METHOD_HEAT = SPACE_CENTERED
 MUSCL_HEAT= YES
-%
-% !!! this is not used here
 JST_SENSOR_COEFF_HEAT= ( 0.5, 0.15 )
-%
-%!!! this is not used here
 TIME_DISCRE_HEAT= EULER_IMPLICIT
 %
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 %MESH_FILENAME= solid.su2
-%
 MESH_FORMAT= SU2
 %
-SOLUTION_FILENAME= solution
-RESTART_FILENAME= solution
+SOLUTION_FILENAME= solution_flow
+RESTART_FILENAME= solution_flow
 %
 VOLUME_FILENAME= heat 
 SURFACE_FILENAME= surface_heat
-READ_BINARY_RESTART= YES
-%
-HISTORY_OUTPUT= (ITER, RMS_RES, HEAT, LINSOL)
+WRT_CON_FREQ= 1
+WRT_RESIDUALS= YES
+WRT_LIMITERS= YES
 %
 CONV_FILENAME= history
-%
-WRT_CON_FREQ= 1
+BREAKDOWN_FILENAME= forces_breakdown
+VALUE_OBJFUNC_FILENAME= of_eval
+%GRAD_OBJFUNC_FILENAME= of_grad_solid.csv
+
+SOLUTION_ADJ_FILENAME= solution_adj
+RESTART_ADJ_FILENAME= solution_adj
+VOLUME_ADJ_FILENAME= adjoint
+SURFACE_ADJ_FILENAME= surface_adjoint
