Little changes for streamwise regression tests.

--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_3d/configMaster.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_3d/configMaster.cfg
@@ -38,7 +38,7 @@ OUTPUT_WRT_FREQ= 2500
 %
 %CHT_ROBIN= NO
 %
-OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
+OUTPUT_FILES= (RESTART, PARAVIEW_MULTIBLOCK)
 %
 % Mesh input file
 MESH_FILENAME= 3D_chtPinArray_coarse.su2
