Add Inviscid Shock Vortex case

--- a/Common/src/toolboxes/MMS/meson.build
+++ b/Common/src/toolboxes/MMS/meson.build
@@ -1,4 +1,5 @@
 common_src += files(['CInviscidVortexSolution.cpp',
+           'CInviscidShockVortexSolution.cpp',
            'CIncTGVSolution.cpp',
            'CMMSIncNSSolution.cpp',
            'CMMSIncEulerSolution.cpp',
