--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_3d/configMaster.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_3d/configMaster.cfg
@@ -28,12 +28,12 @@ MARKER_CHT_INTERFACE= (fluid_bottom_interface, solid_bottom_interface, fluid_pin
 %
 TIME_DOMAIN = NO
 %
-SCREEN_OUTPUT= (WALL_TIME, OUTER_ITER, BGS_PRESSURE[0], BGS_TEMPERATURE[0], BGS_TEMPERATURE[1], STREAMWISE_MASSFLOW[0], STREAMWISE_DP[0], PRESSURE_DROP[0], AVG_TEMPERATURE[1] )
+SCREEN_OUTPUT= (OUTER_ITER, BGS_PRESSURE[0], BGS_TEMPERATURE[0], BGS_TEMPERATURE[1], STREAMWISE_MASSFLOW[0], STREAMWISE_DP[0], PRESSURE_DROP[0], AVG_TEMPERATURE[1] )
 SCREEN_WRT_FREQ_OUTER= 100
 %
 CONV_RESIDUAL_MINVAL= -26
 % Number of total iterations
-OUTER_ITER = 300000
+OUTER_ITER = 15000
 OUTPUT_WRT_FREQ= 2500
 %
 %CHT_ROBIN= NO
