Correction of SA turbulence model and update config file
Implement original SA and Negative SA turbulence models as well as their no-ft2 versions

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -17,7 +17,7 @@
 %                               HEAT_EQUATION_FVM, ELASTICITY)
 SOLVER= EULER
 %
-% Specify turbulence model (NONE, SA, SA_NEG, SST, SA_E, SA_COMP, SA_E_COMP, SST_SUST)
+% Specify turbulence model (NONE, SA, SA_NOFT2, SA_NEG, SA_NEG_NOFT2, SST, SA_E, SA_COMP, SA_E_COMP, SST_SUST)
 KIND_TURB_MODEL= NONE
 %
 % Specify subgrid scale model(NONE, IMPLICIT_LES, SMAGORINSKY, WALE, VREMAN)
@@ -1434,9 +1434,10 @@ SOLUTION_ADJ_FILENAME= solution_adj.dat
 TABULAR_FORMAT= TECPLOT
 %
 % Files to output 
-% Possible formats : (TECPLOT, TECPLOT_BINARY, SURFACE_TECPLOT,
-%  SURFACE_TECPLOT_BINARY, CSV, SURFACE_CSV, PARAVIEW, PARAVIEW_BINARY, SURFACE_PARAVIEW, 
-%  SURFACE_PARAVIEW_BINARY, MESH, RESTART_BINARY, RESTART_ASCII, CGNS, STL)
+% Possible formats : (TECPLOT, TECPLOT_ASCII, SURFACE_TECPLOT, SURFACE_TECPLOT_ASCII,
+%  CSV, SURFACE_CSV, PARAVIEW, PARAVIEW_ASCII, PARAVIEW_LEGACY, SURFACE_PARAVIEW,
+%  SURFACE_PARAVIEW_ASCII, SURFACE_PARAVIEW_LEGACY, PARAVIEW_MULTIBLOCK, RESTART,
+%  RESTART_ASCII, CGNS, STL, STL_BINARY, MESH)
 % default : (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 %
