Set up the classes for the standard elements for the grid

--- a/Common/src/fem/meson.build
+++ b/Common/src/fem/meson.build
@@ -1,11 +1,22 @@
 common_src += files(['CFEMStandardElementBase.cpp',
+                     'CFEMStandardFaceLineGrid.cpp',
+                     'CFEMStandardFaceQuadGrid.cpp',
+                     'CFEMStandardFaceTriGrid.cpp',
+                     'CFEMStandardHex.cpp',
+                     'CFEMStandardLine.cpp',
+                     'CFEMStandardPrism.cpp',
+                     'CFEMStandardPyra.cpp',
+                     'CFEMStandardQuad.cpp',
+                     'CFEMStandardTet.cpp',
+                     'CFEMStandardTri.cpp',
                      'CFEMStandardVolumeHexGrid.cpp',
                      'CFEMStandardVolumePrismGrid.cpp',
                      'CFEMStandardVolumePyraGrid.cpp',
                      'CFEMStandardVolumeQuadGrid.cpp',
                      'CFEMStandardVolumeTetGrid.cpp',
                      'CFEMStandardVolumeTriGrid.cpp',
+                     'fem_quadrature_tets.cpp',
+                     'fem_quadrature_tris.cpp',
                      'fem_geometry_structure.cpp',
                      'fem_standard_element.cpp',
-                     'fem_wall_distance.cpp',
-                     'fem_gauss_jacobi_quadrature.cpp'])
+                     'fem_wall_distance.cpp'])
