--- a/meson.build
+++ b/meson.build
@@ -171,6 +171,8 @@ subdir('SU2_GEO/src')
 subdir('SU2_MSH/src')
 # compile SU2_SOL executable
 subdir('SU2_SOL/src')
+# compile SU2_INTERP executable
+subdir('SU2_INTERP/src')
 # install python scripts
 subdir('SU2_PY')
 # unit tests
