--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1025,8 +1025,9 @@ MG_DAMP_PROLONGATION= 0.75
 
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
-% Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, AUSMPLUSUP,
-%                              AUSMPLUSUP2, HLLC, TURKEL_PREC, MSW, FDS, SLAU, SLAU2)
+% Convective numerical method (JST, JST_KE, JST_MAT, LAX-FRIEDRICH, CUSP, ROE, AUSM,
+%                              AUSMPLUSUP, AUSMPLUSUP2, AUSMPWPLUS, HLLC, TURKEL_PREC,
+%                              SW, MSW, FDS, SLAU, SLAU2, L2ROE, LMROE)
 CONV_NUM_METHOD_FLOW= ROE
 %
 % Roe Low Dissipation function for Hybrid RANS/LES simulations (FD, NTS, NTS_DUCROS)
@@ -1041,6 +1042,10 @@ LOW_MACH_PREC= NO
 % Use numerically computed Jacobians for AUSM+up(2) and SLAU(2)
 % Slower per iteration but potentialy more stable and capable of higher CFL
 USE_ACCURATE_FLUX_JACOBIANS= NO
+%
+% Use the vectorized version of the selected numerical method (available for JST family and Roe).
+% SU2 should be compiled for an AVX or AVX512 architecture for best performance.
+USE_VECTORIZATION= NO
 %
 % Entropy fix coefficient (0.0 implies no entropy fixing, 1.0 implies scalar
 %                          artificial dissipation)
