Implemented the determination of the point distribution (LGL or equidistant) in the volume elements

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1063,6 +1063,9 @@ TIME_DISCRE_FLOW= EULER_IMPLICIT
 % FEM numerical method (DG)
 NUM_METHOD_FEM_FLOW= DG
 %
+% Location of the grid DOFs in standard element(SU2_DECIDES, LGL, EQUIDISTANT)
+KIND_FEM_GRIDDOFSLOCATION= SU2_DECIDES
+%
 % Riemann solver used for DG (ROE, LAX-FRIEDRICH, AUSM, AUSMPW+, HLLC, VAN_LEER)
 RIEMANN_SOLVER_FEM= ROE
 %
