--- a/Common/src/fem/meson.build
+++ b/Common/src/fem/meson.build
@@ -1,7 +1,5 @@
 common_src += files(['CFEMStandardElementBase.cpp',
-                     'CFEMStandardFaceLineGrid.cpp',
-                     'CFEMStandardFaceQuadGrid.cpp',
-                     'CFEMStandardFaceTriGrid.cpp',
+                     'CFEMStandardLineGrid.cpp',
                      'CFEMStandardHex.cpp',
                      'CFEMStandardLine.cpp',
                      'CFEMStandardPrism.cpp',
@@ -9,12 +7,12 @@ common_src += files(['CFEMStandardElementBase.cpp',
                      'CFEMStandardQuad.cpp',
                      'CFEMStandardTet.cpp',
                      'CFEMStandardTri.cpp',
-                     'CFEMStandardVolumeHexGrid.cpp',
-                     'CFEMStandardVolumePrismGrid.cpp',
-                     'CFEMStandardVolumePyraGrid.cpp',
-                     'CFEMStandardVolumeQuadGrid.cpp',
-                     'CFEMStandardVolumeTetGrid.cpp',
-                     'CFEMStandardVolumeTriGrid.cpp',
+                     'CFEMStandardHexGrid.cpp',
+                     'CFEMStandardPrismGrid.cpp',
+                     'CFEMStandardPyraGrid.cpp',
+                     'CFEMStandardQuadGrid.cpp',
+                     'CFEMStandardTetGrid.cpp',
+                     'CFEMStandardTriGrid.cpp',
                      'fem_gauss_jacobi_quadrature.cpp',
                      'fem_quadrature_tets.cpp',
                      'fem_quadrature_tris.cpp',
