--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -126,6 +126,8 @@ su2_cfd_src += files(['numerics/CNumerics.cpp',
                       'numerics/NEMO/convection/ausmplusup2.cpp',
                       'numerics/NEMO/convection/ausmpwplus.cpp',
                       'numerics/NEMO/convection/msw.cpp',
+                      'numerics/NEMO/convection/slau.cpp',
+                      'numerics/NEMO/convection/slau2.cpp',
                       'numerics/NEMO/NEMO_diffusion.cpp',
                       'numerics/NEMO/NEMO_sources.cpp',
                       'numerics/continuous_adjoint/adj_convection.cpp',
