Adapting reg test values for streamwise periodic flow.

--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/FD_configFluid.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/FD_configFluid.cfg
@@ -180,8 +180,8 @@ CONV_STARTITER= 100000000
 %MESH_FILENAME= fluid.su2
 MESH_FORMAT= SU2
 %
-%SOLUTION_FILENAME= solution_flow
-%RESTART_FILENAME= solution_flow
+SOLUTION_FILENAME= solution_flow
+RESTART_FILENAME= solution_flow
 %
 VOLUME_FILENAME= flow
 %SURFACE_FILENAME= surface_flow
