--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/FD_configSolid.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/FD_configSolid.cfg
@@ -89,8 +89,8 @@ TIME_DISCRE_HEAT= EULER_IMPLICIT
 %MESH_FILENAME= solid.su2
 MESH_FORMAT= SU2
 %
-%SOLUTION_FILENAME= solution_heat
-%RESTART_FILENAME= solution_heat
+SOLUTION_FILENAME= solution_flow
+RESTART_FILENAME= solution_flow
 %
 VOLUME_FILENAME= heat 
 SURFACE_FILENAME= surface_heat
