--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/configFluid.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/configFluid.cfg
@@ -245,7 +245,7 @@ CONV_STARTITER= 100000000
 % Mesh input file format (SU2, CGNS)
 MESH_FORMAT= SU2
 %
-SOLUTION_FILENAME= solution
+SOLUTION_FILENAME= solution_flow
 RESTART_FILENAME= solution
 %
 % Output tabular file format (TECPLOT, CSV)
