--- a/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/configSolid.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/chtPinArray_2d/configSolid.cfg
@@ -125,7 +125,7 @@ TIME_DISCRE_HEAT= EULER_IMPLICIT
 %
 MESH_FORMAT= SU2
 %
-SOLUTION_FILENAME= solution
+SOLUTION_FILENAME= solution_flow
 RESTART_FILENAME= solution
 %
 VOLUME_FILENAME= heat 
