Update to one regression test that was still nondimensional

--- a/TestCases/incomp_navierstokes/streamwise_periodic/half_cylinder_2D/half_cylinder_2D.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/half_cylinder_2D/half_cylinder_2D.cfg
@@ -77,7 +77,7 @@ INC_VELOCITY_INIT= ( 1.0, 0.0, 0.0 )
 % Non-dimensionalization scheme for incompressible flows. Options are
 % INITIAL_VALUES (default), REFERENCE_VALUES, or DIMENSIONAL.
 % INC_*_REF values are ignored unless REFERENCE_VALUES is chosen.
-INC_NONDIM= INITIAL_VALUES
+INC_NONDIM= DIMENSIONAL
 %
 % ---- IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
 %
