--- a/Common/src/meson.build
+++ b/Common/src/meson.build
@@ -12,6 +12,7 @@ subdir('toolboxes')
 subdir('geometry')
 subdir('geometry/elements')
 subdir('geometry/dual_grid')
+subdir('geometry/fem_grid')
 subdir('geometry/primal_grid')
 subdir('geometry/meshreader')
 subdir('interface_interpolation')
