update regression residuals 1) thermal bath without residual limiting 2) visc wedge with TD_INITIALIZATION

--- a/TestCases/nonequilibrium/viscwedge/viscwedge.cfg
+++ b/TestCases/nonequilibrium/viscwedge/viscwedge.cfg
@@ -41,15 +41,16 @@ AOA= 0.0
 SIDESLIP_ANGLE= 0.0
 %
 % Free-stream pressure (101325.0 N/m^2 by default, only Euler flows)  
-FREESTREAM_PRESSURE= 101325.0
+FREESTREAM_PRESSURE= 10.0
 %
 % Free-stream temperature (288.15 K by default)
 FREESTREAM_TEMPERATURE= 288.15
 FREESTREAM_TEMPERATURE_VE= 288.15
 %
 % Reynolds number (non-dimensional, based on the free-stream values)
-REYNOLDS_NUMBER= 10000
+%REYNOLDS_NUMBER= 10000
 %KIND_TURB_MODEL= NONE
+INIT_OPTION= TD_CONDITIONS
 %
 %
 % ---- NONEQUILIBRIUM GAS, IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
