Redistributed the grid over the MPI-ranks and stored the data in the final datastructures

--- a/Common/src/geometry/fem_grid/meson.build
+++ b/Common/src/geometry/fem_grid/meson.build
@@ -1,3 +1,4 @@
 common_src += files(['CDummyMesh_DG.cpp',
                      'CMeshFEM.cpp',
-                     'CMeshFEM_DG.cpp'])
+                     'CMeshFEM_DG.cpp',
+                     'CPointFEM.cpp'])
