--- a/Common/src/toolboxes/fem/meson.build
+++ b/Common/src/toolboxes/fem/meson.build
@@ -1,2 +1,3 @@
 common_src += files(['CFaceOfElement.cpp',
-           'CMatchingFace.cpp'])
+                     'CMatchingFace.cpp',
+                     'CReorderElements.cpp'])
