Split the FEM volume element in a base class and a DG class and moved the repartitioning to CMeshFEM_DG

--- a/Common/src/geometry/fem_grid/meson.build
+++ b/Common/src/geometry/fem_grid/meson.build
@@ -1,4 +1,4 @@
 common_src += files(['CDummyMesh_DG.cpp',
-                     'CMeshFEM.cpp',
+                     'CMeshFEM_Base.cpp',
                      'CMeshFEM_DG.cpp',
                      'CPointFEM.cpp'])
