--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -11,6 +11,7 @@ su2_cfd_src += files(['fluid/CFluidModel.cpp',
 su2_cfd_src += files(['output/COutputFactory.cpp',
                       'output/CAdjElasticityOutput.cpp',
                       'output/CAdjFlowCompOutput.cpp',
+                      'output/COneShotOutput.cpp',
                       'output/CAdjFlowIncOutput.cpp',
                       'output/CAdjHeatOutput.cpp',
                       'output/CBaselineOutput.cpp',
