reorganize interpolation files. include interpolation flags in config_template.cfg

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1496,7 +1496,13 @@ READ_BINARY_RESTART= YES
 %
 % Reorient elements based on potential negative volumes (YES/NO)
 REORIENT_ELEMENTS= YES
-
+%
+% --------------------- SOLUTION INTERPOLATION -----------------------%
+%
+INTERPOLATE_SOLUTION= YES
+%
+TARGET_MESH_FILENAME= mesh.su2
+%
 % --------------------- OPTIMAL SHAPE DESIGN DEFINITION -----------------------%
 %
 % Available flow based objective functions or constraint functions
