add custom dependencies to meson.build

--- a/meson.build
+++ b/meson.build
@@ -156,6 +156,11 @@ elif get_option('enable-openblas')
 
 endif
 
+extra_deps = get_option('extra-deps').split(',')
+foreach dep : extra_deps
+  su2_deps += dependency(dep)
+endforeach
+
 catch2_dep = declare_dependency(include_directories: 'externals/catch2/')
 
 # compile common library
