fix for empty strings

--- a/meson.build
+++ b/meson.build
@@ -158,7 +158,9 @@ endif
 
 extra_deps = get_option('extra-deps').split(',')
 foreach dep : extra_deps
-  su2_deps += dependency(dep)
+  if dep != ''
+    su2_deps += dependency(dep)
+  endif
 endforeach
 
 catch2_dep = declare_dependency(include_directories: 'externals/catch2/')
