Make mesh quality metrics available in new output structure.

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1422,6 +1422,9 @@ HISTORY_OUTPUT= (ITER, RMS_RES)
 % Volume output fields/groups (use 'SU2_CFD -d <config_file>' to view list of available fields)
 VOLUME_OUTPUT= (COORDINATES, SOLUTION, PRIMITIVE)
 %
+% Write volume data for mesh quality metrics. Additionally set VOLUME_OUTPUT= (MESH_QUALITY, ...)
+WRT_MESH_QUALITY= NO
+%
 % Writing frequency for screen output
 SCREEN_WRT_FREQ_INNER= 1
 %
