New setup of the standard elements for the faces, both boundary and internal

--- a/Common/src/fem/meson.build
+++ b/Common/src/fem/meson.build
@@ -2,6 +2,12 @@ common_src += files(['CFEMStandardElementBase.cpp',
                      'CFEMStandardLineGrid.cpp',
                      'CFEMStandardHex.cpp',
                      'CFEMStandardLine.cpp',
+                     'CFEMStandardInternalFaceGrid.cpp',
+                     'CFEMStandardInternalFaceSol.cpp',
+                     'CFEMStandardLineAdjacentQuadGrid.cpp',
+                     'CFEMStandardLineAdjacentQuadSol.cpp',
+                     'CFEMStandardLineAdjacentTriGrid.cpp',
+                     'CFEMStandardLineAdjacentTriSol.cpp',
                      'CFEMStandardPrism.cpp',
                      'CFEMStandardPyra.cpp',
                      'CFEMStandardQuad.cpp',
@@ -11,14 +17,29 @@ common_src += files(['CFEMStandardElementBase.cpp',
                      'CFEMStandardPrismGrid.cpp',
                      'CFEMStandardPyraGrid.cpp',
                      'CFEMStandardQuadGrid.cpp',
+                     'CFEMStandardQuadAdjacentHexGrid.cpp',
+                     'CFEMStandardQuadAdjacentHexSol.cpp',
+                     'CFEMStandardQuadAdjacentPrismGrid.cpp',
+                     'CFEMStandardQuadAdjacentPrismSol.cpp',
+                     'CFEMStandardQuadAdjacentPyraGrid.cpp',
+                     'CFEMStandardQuadAdjacentPyraSol.cpp',
                      'CFEMStandardTetGrid.cpp',
                      'CFEMStandardTriGrid.cpp',
+                     'CFEMStandardTriAdjacentPrismGrid.cpp',
+                     'CFEMStandardTriAdjacentPrismSol.cpp',
+                     'CFEMStandardTriAdjacentPyraGrid.cpp',
+                     'CFEMStandardTriAdjacentPyraSol.cpp',
+                     'CFEMStandardTriAdjacentTetGrid.cpp',
+                     'CFEMStandardTriAdjacentTetSol.cpp',
                      'CFEMStandardHexVolumeSol.cpp',
                      'CFEMStandardPrismVolumeSol.cpp',
                      'CFEMStandardPyraVolumeSol.cpp',
                      'CFEMStandardQuadVolumeSol.cpp',
                      'CFEMStandardTetVolumeSol.cpp',
                      'CFEMStandardTriVolumeSol.cpp',
+                     'CGemmFaceHex.cpp',
+                     'CGemmFaceQuad.cpp',
+                     'CGemmStandard.cpp',
                      'fem_gauss_jacobi_quadrature.cpp',
                      'fem_quadrature_tets.cpp',
                      'fem_quadrature_tris.cpp'])
