--- a/Common/src/toolboxes/fem/meson.build
+++ b/Common/src/toolboxes/fem/meson.build
@@ -1,3 +1,4 @@
 common_src += files(['CFaceOfElement.cpp',
                      'CMatchingFace.cpp',
-                     'CReorderElements.cpp'])
+                     'CReorderElements.cpp',
+                     'CSortFaces.cpp'])
