--- a/Common/src/geometry/fem_grid/meson.build
+++ b/Common/src/geometry/fem_grid/meson.build
@@ -1,4 +1,6 @@
 common_src += files(['CDummyMesh_DG.cpp',
                      'CMeshFEM_Base.cpp',
                      'CMeshFEM_DG.cpp',
-                     'CPointFEM.cpp'])
+                     'CPointFEM.cpp',
+                     'CSurfaceElementFEM.cpp',
+                     'CVolumeElementFEM_Base.cpp'])
