Update old config files.

--- a/TestCases/pressure_based/flatplate_turb/turb_flatplate.cfg
+++ b/TestCases/pressure_based/flatplate_turb/turb_flatplate.cfg
@@ -17,9 +17,7 @@
 SOLVER= INC_RANS
 %
 % If Navier-Stokes, kind of turbulent model (NONE, SA)
-KIND_TURB_MODEL= SST
-
-%KIND_TRANS_MODEL= LM
+KIND_TURB_MODEL= SA
 
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT)
 MATH_PROBLEM= DIRECT
@@ -27,13 +25,9 @@ MATH_PROBLEM= DIRECT
 % Restart solution (NO, YES)
 RESTART_SOL=NO
 %
-% Type of incompressible system
+% Incompressible solver (DENSITY_BASED, PRESSURE_BASED)
+% DENSITY_BASED is chosen by default
 KIND_INCOMP_SYSTEM= PRESSURE_BASED
-
-KIND_PB_ITER=PISO
-
-%FREESTREAM_TURBULENCEINTENSITY= 0.0007
-%FREESTREAM_TURB2LAMVISCRATIO= 0.882
 
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
@@ -137,7 +131,7 @@ MARKER_MONITORING= ( wall )
 NUM_METHOD_GRAD= GREEN_GAUSS
 %
 % Courant-Friedrichs-Lewy condition of the finest grid
-CFL_NUMBER= 2.0
+CFL_NUMBER= 1
 %
 % Adaptive CFL number (NO, YES)
 CFL_ADAPT= NO
@@ -150,7 +144,7 @@ CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.0, 100.0 )
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
 %
 % Number of total iterations
-ITER= 1000
+ITER= 15000
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -165,7 +159,7 @@ LINEAR_SOLVER_ILU_FILL_IN= 0
 %
 % Minimum error of the linear solver for implicit formulations
 LINEAR_SOLVER_ERROR= 1E-12
-%kannada janapada songs
+%
 % Max number of iterations of the linear solver for the implicit formulation
 LINEAR_SOLVER_ITER= 20
 
@@ -208,9 +202,9 @@ MG_DAMP_PROLONGATION= 0.8
 
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
-% Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
-%                              TURKEL_PREC, MSW)
-%CONV_NUM_METHOD_FLOW= FDS
+% Convective numerical method (JST, JST_KE, JST_MAT, LAX-FRIEDRICH, CUSP, ROE, AUSM,
+%                              AUSMPLUSUP, AUSMPLUSUP2, AUSMPWPLUS, HLLC, TURKEL_PREC,
+%                              SW, MSW, FDS, SLAU, SLAU2, L2ROE, LMROE, UDS)
 CONV_NUM_METHOD_FLOW= UDS
 %
 % Monotonic Upwind Scheme for Conservation Laws (TVD) in the flow equations.
@@ -241,9 +235,13 @@ SLOPE_LIMITER_TURB= VENKATAKRISHNAN
 %
 % Time discretization (EULER_IMPLICIT)
 TIME_DISCRE_TURB= EULER_IMPLICIT
-
+%
+% Number of iterations for the poisson solver
 LINEAR_SOLVER_ITER_POISSON = 25
+%
+% Number of iterations for the flow solver
 LINEAR_SOLVER_ITER_FLOW = 25
+
 RELAXATION_FACTOR_PBFLOW= 1.0
 RELAXATION_FACTOR_RHIECHOW= 1.0
 
@@ -263,7 +261,7 @@ CONV_STARTITER= 10
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 % Mesh input file
-MESH_FILENAME= mesh/mesh_flatplate_turb_137x97.su2
+MESH_FILENAME= mesh/mesh_flatplate_turb_69x49.su2
 %
 % Mesh input file format (SU2, CGNS, NETCDF_ASCII)
 MESH_FORMAT= SU2
@@ -297,5 +295,5 @@ WRT_SOL_FREQ= 250
 % Writing convergence history frequency
 WRT_CON_FREQ= 1
 
-SCREEN_OUTPUT= (INNER_ITER, RMS_VELOCITY-X, RMS_MASSFLUX, RMS_TKE, LIFT,DRAG)
-%SCREEN_OUTPUT= (INNER_ITER, RMS_VELOCITY-X, RMS_MASSFLUX, RMS_NU_TILDE, LIFT,DRAG)
+%SCREEN_OUTPUT= (INNER_ITER, RMS_VELOCITY-X, RMS_MASSFLUX, RMS_TKE, LIFT,DRAG)
+SCREEN_OUTPUT= (INNER_ITER, RMS_VELOCITY-X, RMS_MASSFLUX, RMS_NU_TILDE, LIFT,DRAG)
