--- a/TestCases/pressure_based/lid_driven_cavity/liddrivencavity.cfg
+++ b/TestCases/pressure_based/lid_driven_cavity/liddrivencavity.cfg
@@ -17,8 +17,10 @@
 
 SOLVER= INC_NAVIER_STOKES
 %
+% Incompressible solver (DENSITY_BASED, PRESSURE_BASED)
+% DENSITY_BASED is chosen by default
 KIND_INCOMP_SYSTEM= PRESSURE_BASED
-
+%
 % Gravity force (NO, YES)
 GRAVITY_FORCE= NO
 %
@@ -190,17 +192,19 @@ LINEAR_SOLVER_ERROR= 1E-6
 %
 % Max number of iterations of the linear solver for the implicit formulation
 LINEAR_SOLVER_ITER= 20
-
+%
+% Number of iterations for the poisson solver
 LINEAR_SOLVER_ITER_POISSON= 50
+%
+% Number of iterations for the flow solver
 LINEAR_SOLVER_ITER_FLOW= 25
 
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
-% Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
-%                              TURKEL_PREC, MSW)
-%CONV_NUM_METHOD_FLOW= FDS
-%CONV_NUM_METHOD_FLOW= JST
-CONV_NUM_METHOD_FLOW= SCALAR_UPWIND
+% Convective numerical method (JST, JST_KE, JST_MAT, LAX-FRIEDRICH, CUSP, ROE, AUSM,
+%                              AUSMPLUSUP, AUSMPLUSUP2, AUSMPWPLUS, HLLC, TURKEL_PREC,
+%                              SW, MSW, FDS, SLAU, SLAU2, L2ROE, LMROE, UDS)
+CONV_NUM_METHOD_FLOW= UDS
 %
 % Monotonic Upwind Scheme for Conservation Laws (TVD) in the flow equations.
 %           Required for 2nd order upwind schemes (NO, YES)
@@ -217,7 +221,6 @@ JST_SENSOR_COEFF= ( 0.5, 0.02 )
 %
 % Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT, EULER_EXPLICIT)
 TIME_DISCRE_FLOW= EULER_IMPLICIT
-TIME_DISCRE_POISSON= EULER_IMPLICIT
 
 % -------------------- TURBULENT NUMERICAL METHOD DEFINITION ------------------%
 %
