--- a/TestCases/pressure_based/turb_naca0012/turb_naca0012_v7.cfg
+++ b/TestCases/pressure_based/turb_naca0012/turb_naca0012_v7.cfg
@@ -19,13 +19,14 @@ SOLVER= INC_RANS
 % Specify turbulent model (NONE, SA, SA_NEG, SST)
 KIND_TURB_MODEL= SST
 %
-KIND_TRANS_MODEL= LM
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT)
 MATH_PROBLEM= DIRECT
 %
 % Restart solution (NO, YES)
 RESTART_SOL= NO
-
+%
+% Incompressible solver (DENSITY_BASED, PRESSURE_BASED)
+% DENSITY_BASED is chosen by default
 %KIND_INCOMP_SYSTEM= PRESSURE_BASED
 % -------------------- INCOMPRESSIBLE FREE-STREAM DEFINITION ------------------%
 %
@@ -84,8 +85,6 @@ REF_AREA= 1.0
 %
 % Navier-Stokes wall boundary marker(s) (NONE = no marker)
 MARKER_HEATFLUX= ( airfoil, 0.0 )
-%WALL_TYPE= ROUGH
-%WALL_ROUGHNESS= 0.001
 %
 % Farfield boundary marker(s) (NONE = no marker)
 MARKER_FAR= ( farfield-1, farfield-2 )
@@ -100,10 +99,10 @@ MARKER_MONITORING= ( airfoil )
 %
 % Numerical method for spatial gradients (GREEN_GAUSS, WEIGHTED_LEAST_SQUARES)
 NUM_METHOD_GRAD= GREEN_GAUSS
-%NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 %
 % Courant-Friedrichs-Lewy condition of the finest grid
 CFL_NUMBER= 1
+%
 % Adaptive CFL number (NO, YES)
 CFL_ADAPT= NO
 %
@@ -151,34 +150,11 @@ LINEAR_SOLVER_ERROR= 1E-10
 % Max number of iterations of the linear solver for the implicit formulation
 LINEAR_SOLVER_ITER= 10
 
-% -------------------------- MULTIGRID PARAMETERS -----------------------------%
-%
-% Multi-Grid Levels (0 = no multi-grid)
-MGLEVEL= 0
-%
-% Multi-grid cycle (V_CYCLE, W_CYCLE, FULLMG_CYCLE)
-MGCYCLE= V_CYCLE
-%
-% Multi-grid pre-smoothing level
-MG_PRE_SMOOTH= ( 1, 1, 1, 1 )
-%
-% Multi-grid post-smoothing level
-MG_POST_SMOOTH= ( 0, 0, 0, 0 )
-%
-% Jacobi implicit smoothing of the correction
-MG_CORRECTION_SMOOTH= ( 0, 0, 0, 0 )
-%
-% Damping factor for the residual restriction
-MG_DAMP_RESTRICTION= 0.8
-%
-% Damping factor for the correction prolongation
-MG_DAMP_PROLONGATION= 0.8
-
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
-% Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
-%                              TURKEL_PREC, MSW)
-%CONV_NUM_METHOD_FLOW= FDS
+% Convective numerical method (JST, JST_KE, JST_MAT, LAX-FRIEDRICH, CUSP, ROE, AUSM,
+%                              AUSMPLUSUP, AUSMPLUSUP2, AUSMPWPLUS, HLLC, TURKEL_PREC,
+%                              SW, MSW, FDS, SLAU, SLAU2, L2ROE, LMROE, UDS)
 CONV_NUM_METHOD_FLOW= UDS
 %
 % Monotonic Upwind Scheme for Conservation Laws (TVD) in the flow equations.
@@ -193,12 +169,16 @@ JST_SENSOR_COEFF= ( 0.0, 0.02 )
 %
 % Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT, EULER_EXPLICIT)
 TIME_DISCRE_FLOW= EULER_IMPLICIT
-
+%
+% Number of iterations for the poisson solver
 LINEAR_SOLVER_ITER_POISSON = 20
+%
+% Number of iterations for the flow solver
 LINEAR_SOLVER_ITER_FLOW = 20
+
 RELAXATION_FACTOR_PBFLOW= 1.0
 RELAXATION_FACTOR_RHIECHOW= 0.5
-CFL_REDUCTION_TURB= 0.95
+
 % -------------------- TURBULENT NUMERICAL METHOD DEFINITION ------------------%
 %
 % Convective numerical method (SCALAR_UPWIND)
