--- a/TestCases/pressure_based/channel/channel_visc.cfg
+++ b/TestCases/pressure_based/channel/channel_visc.cfg
@@ -1,11 +1,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Incompressible flow hydrofoil 5 degrees                    %
-% Author: Francisco Palacios                                                   %
-% Institution: Stanford University                                             %
-% Date: 09/18/2011                                                             %
-% File Version 6.0.1 "Falcon"                                                %
+% Case description: Incompressible and laminar channel flow                    %
+% Author: Akshay Koodly	                                                       %
+% Institution: University of Twente                                            %
+% File Version 7.0.7 "Blackbird                                                %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
