--- a/TestCases/pressure_based/turb_naca0012/turb_naca0012_v7.cfg
+++ b/TestCases/pressure_based/turb_naca0012/turb_naca0012_v7.cfg
@@ -3,9 +3,9 @@
 % SU2 configuration file                                                       %
 % Case description: 2D NACA 0012 Airfoil Validation Case (incompressible)      %
 %                   http://turbmodels.larc.nasa.gov/naca0012_val_sa.html       %
-% Author: Thomas D. Economon & Francisco Palacios	                       %
-% Date: 2018.06.10                                                             %
-% File Version 6.1.0 "Falcon"                                                  %
+% Author: Akshay Koodly	                                                       %
+% Institution: University of Twente                                            %
+% File Version 7.0.7 "Blackbird                                                %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
