--- a/TestCases/pressure_based/centrifugal_blade/centrifugal_blade_inc.cfg
+++ b/TestCases/pressure_based/centrifugal_blade/centrifugal_blade_inc.cfg
@@ -2,10 +2,10 @@
 %                                                                              %
 % SU2 configuration file                                                       %
 % Case description: Centrifugal turbine rotor                                  %
-% Author:S. Vitale                     			                       %
-% Institution: Delft University of Technology                                  %
-% Date: Oct 26th, 2015                                                         %
-% File Version 4.0.1 "cardinal"                                                %
+%                   based on turbomachinery/centrifugal blade                  %
+% Author: Akshay Koodly	                                                       %
+% Institution: University of Twente                                            %
+% File Version 7.0.7 "Blackbird                                                %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
