--- a/TestCases/pressure_based/couette_flow/couette_flow.cfg
+++ b/TestCases/pressure_based/couette_flow/couette_flow.cfg
@@ -1,11 +1,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Rotating NACA0012                                          %
-% Author: Thomas D. Economon                                                   %
-% Institution: Stanford University                                             %
-% Date: 2013.09.29                                                             %
-% File Version 5.0.0 "Raven"                                                %
+% Case description: Couette flow (co-rotating discs                            %
+% Author: Akshay Koodly	                                                       %
+% Institution: University of Twente                                            %
+% File Version 7.0.7 "Blackbird                                                %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
