--- a/TestCases/pressure_based/cylinder/lam_cylinder.cfg
+++ b/TestCases/pressure_based/cylinder/lam_cylinder.cfg
@@ -2,10 +2,9 @@
 %                                                                              %
 % SU2 configuration file                                                       %
 % Case description: Steady incompressible laminar flow around a cylinder       %
-% Author: Francisco Palacios						                           
-% Institution: Stanford University                                             %
-% Date: 2012.03.14                                                             %
-% File Version 5.0.0 "Raven"                                                %
+% Author: Akshay Koodly	                                                       %
+% Institution: University of Twente                                            %
+% File Version 7.0.7 "Blackbird                                                %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
