--- a/TestCases/pressure_based/flatplate_turb/turb_flatplate.cfg
+++ b/TestCases/pressure_based/flatplate_turb/turb_flatplate.cfg
@@ -2,10 +2,9 @@
 %                                                                              %
 % SU2 configuration file                                                       %
 % Case description: Turbulent flow over flat plate with zero pressure gradient %
-% Author: Thomas D. Economon                                                   %
-% Institution: Stanford University                                             %
-% Date: 2011.11.10                                                             %
-% File Version 5.0.0 "Raven"                                                %
+% Author: Akshay Koodly                                                        %
+% Institution: University of Twente                                            %
+% File Version 7.0.7 "Blackbird"                                               %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
