Add a little comment to the config_template.

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -684,6 +684,9 @@ BODY_FORCE_VECTOR= ( 0.0, 0.0, 0.0 )
 
 % --------------------- STREAMWISE PERIODICITY DEFINITION ---------------------%
 %
+% Generally for streamwise periodicty one has to set MARKER_PERIODIC= (<inlet>, <outlet>, ...)
+% appropriatley as a boundary condition.
+%
 % Specify type of streamwise periodicty (default=NONE, PRESSURE_DROP, MASSFLOW)
 KIND_STREAMWISE_PERIODIC= NONE
 %
