--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ compiler:
 notifications:
     email:
         recipients:
-            - tobias.kattmann@de.bosch.com
+            - su2code-dev@lists.stanford.edu
   
 branches:
     only:
@@ -76,7 +76,7 @@ install:
 
 before_script:
     # Get the test cases
-    - git clone --depth=1 -b feature_periodic_streamwise https://github.com/su2code/TestCases.git ./TestData
+    - git clone --depth=1 -b develop https://github.com/su2code/TestCases.git ./TestData
     - cp -R ./TestData/* ./TestCases/
 
     # Get the tutorial cases
