--- a/Common/src/toolboxes/meson.build
+++ b/Common/src/toolboxes/meson.build
@@ -1,7 +1,7 @@
 common_src += files(['CLinearPartitioner.cpp',
                      'printing_toolbox.cpp',
                      'C1DInterpolation.cpp',
-                     'CGeneralSquareMatrixCM.cpp',
+                     'CSquareMatrixCM.cpp',
                      'CSymmetricMatrix.cpp'])
 
 subdir('MMS')
