--- a/QuickStart/inv_NACA0012.cfg
+++ b/QuickStart/inv_NACA0012.cfg
@@ -301,10 +301,7 @@ SURFACE_FILENAME= surface_flow
 SURFACE_ADJ_FILENAME= surface_adjoint
 %
 % Writing solution file frequency
-WRT_SOL_FREQ= 250
-%
-% Writing convergence history frequency
-WRT_CON_FREQ= 1
+OUTPUT_WRT_FREQ= 250
 
 % --------------------- OPTIMAL SHAPE DESIGN DEFINITION -----------------------%
 % Available flow based objective functions or constraint functions
