--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1457,7 +1457,7 @@ TABULAR_FORMAT= TECPLOT
 % Files to output 
 % Possible formats : (TECPLOT, TECPLOT_BINARY, SURFACE_TECPLOT,
 %  SURFACE_TECPLOT_BINARY, CSV, SURFACE_CSV, PARAVIEW, PARAVIEW_BINARY, SURFACE_PARAVIEW, 
-%  SURFACE_PARAVIEW_BINARY, MESH, RESTART_BINARY, RESTART_ASCII, CGNS, STL, CGNS)
+%  SURFACE_PARAVIEW_BINARY, MESH, RESTART_BINARY, RESTART_ASCII, CGNS, STL)
 % default : (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 %
